src/objects/c2g__codaTransactionLineItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelptransaction</customHelpPage>
    <description>The line items on a transaction.</description>
    <fields>
        <fullName>c2g__AccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsAccountCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>Account Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AccountRollup__c</fullName>
        <formula>IF( ISNULL( c2g__Transaction__r.c2g__Account__c ), &apos;False&apos;, &apos;True&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Rollup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountTradingCurrencyMismatch__c</fullName>
        <formula>c2g__AccountCurrency__r.Name  &lt;&gt;  c2g__Account__r.c2g__CODAAccountTradingCurrency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Trading Currency Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AccountType__c</fullName>
        <formula>IF( c2g__Account__r.c2g__CODAIntercompanyAccount__c, &apos;Intercompany&apos;, IF(c2g__Account__r.c2g__CODAAccountsPayableControl__c = c2g__Account__r.c2g__CODAAccountsReceivableControl__c, &apos;Customer - Vendor&apos;, IF(c2g__Account__r.c2g__CODAAccountsPayableControl__c =  c2g__GeneralLedgerAccount__c , &apos;Vendor&apos;, IF ( c2g__Account__r.c2g__CODAAccountsReceivableControl__c = c2g__GeneralLedgerAccount__c, &apos;Customer&apos;, NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountValue__c</fullName>
        <label>Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AdjustOperatingActivities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Edit this field if you want to override the GLA default for this transaction line item. The Report Reclassify Profits field is updated accordingly.</inlineHelpText>
        <label>Reclassify Profits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfAgeBand__c</fullName>
        <formula>IF( 
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand1Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand1Max__c
), 
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand1Label__c,

IF( 
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand2Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand2Max__c
),
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand2Label__c,

IF( 
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand3Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand3Max__c
),
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand3Label__c,

IF(
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand4Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand4Max__c
),
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand4Label__c,

IF(
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand5Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand5Max__c
),
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand5Label__c,

IF(
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand6Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand6Max__c
),
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand6Label__c,

null
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As of Age Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfAge__c</fullName>
        <formula>c2g__AsOfDate__c - IF( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeByDueDate__c, c2g__DueDate__c, c2g__Transaction__r.c2g__TransactionDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As of Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfDate__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfDualValue__c</fullName>
        <label>As of Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfHomeValue__c</fullName>
        <label>As of Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfName__c</fullName>
        <label>As of Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Bank Account Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsBankAccountCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountValue__c</fullName>
        <label>Bank Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankReconciliationStatus__c</fullName>
        <formula>IF( ISNULL( c2g__DateCanceled__c ), TEXT(c2g__BankReconciliation__r.c2g__ReconciliationStatus__c), &apos;Canceled&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Reconciliation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankReconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Reconciliation</label>
        <referenceTo>c2g__codaBankReconciliation__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CashFlowCategory__c</fullName>
        <inlineHelpText>Edit this field if you want to override the GLA default for this transaction line item. The Report Cash Flow Category field is updated accordingly.</inlineHelpText>
        <label>Cash Flow Category</label>
        <picklist>
            <picklistValues>
                <fullName>Operating Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investing Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Cash Flow Adjustable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CashFlowLineSummary__c</fullName>
        <inlineHelpText>Edit this field if you want to override the GLA default for this transaction line item. The Report Cash Flow Line Summary field is updated accordingly.</inlineHelpText>
        <label>Cash Flow Line Summary</label>
        <picklist>
            <picklistValues>
                <fullName>(Gain) / Loss on Foreign Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Gain) / Loss on Investment Disposals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Increase) / Decrease in Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Increase) / Decrease in Other Current Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Increase) / Decrease in Receivables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depreciation &amp; Amortization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividends on Common Shares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividends on Preference Shares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividends Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Common Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Employment Creditors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Long Term Borrowing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Other Current Liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Payables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Preference Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Short Term Borrowing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Tax Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase of Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase of Investment Securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sale of Investment Securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Proceeds from Disposal of Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrealized (Gain) / Loss on Foreign Exchange</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__DateCanceled__c</fullName>
        <label>Date Canceled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DaysOverdue__c</fullName>
        <formula>IF(TODAY() - c2g__DueDate__c&lt;0,0,TODAY() - c2g__DueDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1 Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Dimension 1 Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsDimension1Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1Value__c</fullName>
        <label>Dimension 1 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2 Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Dimension 2 Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsDimension2Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2Value__c</fullName>
        <label>Dimension 2 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3 Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Dimension 3 Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsDimension3Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3Value__c</fullName>
        <label>Dimension 3 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountAccountValue1__c</fullName>
        <label>Discount Account Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountAccountValue2__c</fullName>
        <label>Discount Account Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountAccountValue3__c</fullName>
        <label>Discount Account Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountDate1__c</fullName>
        <label>Discount Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountDate2__c</fullName>
        <label>Discount Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountDate3__c</fullName>
        <label>Discount Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountValue1__c</fullName>
        <label>Discount Document Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountValue2__c</fullName>
        <label>Discount Document Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountValue3__c</fullName>
        <label>Discount Document Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsDocumentCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentOutstandingValue__c</fullName>
        <label>Document Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentRate__c</fullName>
        <description>The document to home exchange rate.</description>
        <label>Document Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxTotal__c</fullName>
        <formula>c2g__DocumentTaxValue1__c + c2g__DocumentTaxValue2__c + c2g__DocumentTaxValue3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxValue1__c</fullName>
        <label>Document Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxValue2__c</fullName>
        <label>Document Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxValue3__c</fullName>
        <label>Document Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxableValue__c</fullName>
        <label>Document Taxable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentValue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Document Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dual Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsDualCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DualOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>Dual Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualRate__c</fullName>
        <description>The dual to home exchange rate.</description>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualValue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DueDate__c</fullName>
        <description>The due date on matchable lines</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Expense)</relationshipLabel>
        <relationshipName>TransactionLineItemsExpense</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (General Ledger Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsGeneralLedgerCurr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccountValue__c</fullName>
        <label>General Ledger Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__HomeCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsHomeCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__HomeOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>Home Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeTaxTotal__c</fullName>
        <formula>c2g__HomeTaxValue1__c + c2g__HomeTaxValue2__c + c2g__HomeTaxValue3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeTaxValue1__c</fullName>
        <label>Home Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeTaxValue2__c</fullName>
        <label>Home Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeTaxValue3__c</fullName>
        <label>Home Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeTaxableValue__c</fullName>
        <label>Home Taxable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeValue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__IncomeTaxType__c</fullName>
        <description>Income Tax Type</description>
        <label>Income Tax Type</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Rents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Royalties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Other Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Federal Income Tax Withheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Fishing Boat Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Medical and Healthcare Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Nonemployee Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Substitute Payments in Lieu of Dividends or Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Payer Made Direct Sales of 5000 or More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - Crop Insurance Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - Unused 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Unused 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 - Excess Golden Parachute Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 - Gross Proceeds Paid to an Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reportable</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LineDescription__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Line Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__LineReference__c</fullName>
        <label>Line Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__LineType__c</fullName>
        <label>Line Type</label>
        <picklist>
            <picklistValues>
                <fullName>Analysis</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__MatchingStatus__c</fullName>
        <label>Matching Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Matched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Matchable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed Void</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__OnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__OriginalAccount__c</fullName>
        <label>Original Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwningCurrencyRevaluation__c</fullName>
        <description>The ID of the Currency Revaluation (if any) which owns this transaction line.</description>
        <label>Owning Currency Revaluation</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__OwningDualCurrencyRevaluation__c</fullName>
        <description>The ID of the Dual Currency Revaluation (if any) which owns this transaction line.</description>
        <label>Owning Dual Currency Revaluation</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessStatus__c</fullName>
        <label>Process Status</label>
        <picklist>
            <picklistValues>
                <fullName>Profit and Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Processed</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReportAdjustOperatingActivities__c</fullName>
        <formula>if(isblank(text(c2g__CashFlowCategory__c)), c2g__GeneralLedgerAccount__r.c2g__AdjustOperatingActivities__c,c2g__AdjustOperatingActivities__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is used to determine the final categorization of the transaction line item on the Statement of Cash Flows report.</inlineHelpText>
        <label>Report Reclassify Profits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ReportCashFlowCategory__c</fullName>
        <formula>if(isblank(text(c2g__CashFlowCategory__c)), text(c2g__GeneralLedgerAccount__r.c2g__CashFlowCategory__c), text(c2g__CashFlowCategory__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is used to determine the final categorization of the transaction line item on the Statement of Cash Flows report.</inlineHelpText>
        <label>Report Cash Flow Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ReportCashFlowLineSummary__c</fullName>
        <formula>if(isblank(text(c2g__CashFlowCategory__c)), text(c2g__GeneralLedgerAccount__r.c2g__CashFlowLineSummary__c), text(c2g__CashFlowLineSummary__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is used to determine the final categorization of the transaction line item on the Statement of Cash Flows report.</inlineHelpText>
        <label>Report Cash Flow Line Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__StatementDate__c</fullName>
        <formula>c2g__BankReconciliation__r.c2g__StatementDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Tax Code 1)</relationshipLabel>
        <relationshipName>TransactionLineItemsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Tax Code 2)</relationshipLabel>
        <relationshipName>TransactionLineItemsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Tax Code 3)</relationshipLabel>
        <relationshipName>TransactionLineItemsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxGroup__c</fullName>
        <label>Tax Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <label>Transaction Number</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipName>TransactionLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>